--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # DataSource
-spring.datasource.url=jdbc:mysql://10.0.2.47:3306/spring_security_inclass?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://10.0.2.47:3306/spring_security_inclass?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=springuser
 spring.datasource.password=12341234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
